--- a/pom.xml
+++ b/pom.xml
@@ -28,18 +28,44 @@
     </dependencies>
   </dependencyManagement>
   <dependencies>
+  
+  <!---
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-hibernate-orm-rest-data-panache</artifactId>
     </dependency>
+    
+   
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-jackson</artifactId>
+    </dependency>
+     -->
+     <!--PANACHE-->
+     <dependency>    
+          <groupId>io.quarkus</groupId>                      
+          <artifactId>quarkus-hibernate-orm-panache</artifactId> 
+     </dependency>
+           
+                <!--REST EASY REACTIVE-->
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-resteasy-reactive</artifactId>
     </dependency>
+    
+         <!--JACKSON-->
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-resteasy-reactive-jackson</artifactId>
+    </dependency>
+    <!--
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-hibernate-reactive-rest-data-panache</artifactId>
     </dependency>
+    
+    -->
+         <!--POSTGRESQL-->
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-jdbc-postgresql</artifactId>
