--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ quarkus.datasource.jdbc.max-size=16
 quarkus.hibernate-orm.log.sql=true
 
 
-quarkus.hibernate-orm.database.generation=update
+quarkus.hibernate-orm.database.generation=drop-and-create
 #drop-and-create
