se  modifica el mapeo de entidades, servicios y controllers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@
 quarkus.datasource.db-kind=postgresql 
 quarkus.datasource.username=postgres
 quarkus.datasource.password=toor
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/bcnttdata
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/prueba
+#bcnttdata
 quarkus.datasource.jdbc.max-size=16
 quarkus.hibernate-orm.log.sql=true
 
