--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,11 @@
 quarkus.datasource.db-kind=postgresql 
 quarkus.datasource.username=postgres
 quarkus.datasource.password=toor
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/prueba
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/bcnttdata
 #bcnttdata
 quarkus.datasource.jdbc.max-size=16
 quarkus.hibernate-orm.log.sql=true
 
 
-quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.database.generation=update
 #drop-and-create
