--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 
 quarkus.datasource.db-kind=postgresql 
 quarkus.datasource.username=postgres
-quarkus.datasource.password=toor
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/bcnttdata
+quarkus.datasource.password=password
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5433/bcnttdata
 #bcnttdata
 quarkus.datasource.jdbc.max-size=16
 quarkus.hibernate-orm.log.sql=true
