conexion db remota

--- a/bcnttdata/src/main/resources/application.properties
+++ b/bcnttdata/src/main/resources/application.properties
@@ -11,5 +11,5 @@
 
 #quarkus.hibernate-orm.database.generation=update
 #drop-and-create
-quarkus.mongodb.connection-string= mongodb+srv://rmartiav:VmOrNGpznrv0yvBW@bootcamp.p6jy497.mongodb.net/
-quarkus.mongodb.database=bootcamp
+quarkus.mongodb.connection-string= mongodb+srv://gabrielalaurelq:G3wUXCg1c424kvjl@clusterquarkus023boot.2gjezuk.mongodb.net/bootcampmdb?retryWrites=true&w=majority
+quarkus.mongodb.database=bootcampmdb
