(fix) conexion bd con mongo

--- a/bcnttdata/src/main/resources/application.properties
+++ b/bcnttdata/src/main/resources/application.properties
@@ -11,5 +11,6 @@
 
 #quarkus.hibernate-orm.database.generation=update
 #drop-and-create
-quarkus.mongodb.connection-string= mongodb+srv://gabrielalaurelq:G3wUXCg1c424kvjl@clusterquarkus023boot.2gjezuk.mongodb.net/bootcampmdb?retryWrites=true&w=majority
+quarkus.mongodb.connection-string= mongodb+srv://gabrielalaurelq:G3wUXCg1c424kvjl@clusterquarkus023boot.2gjezuk.mongodb.net/bootcamp
+
 quarkus.mongodb.database=bootcampmdb
