se agrega campos de auditoria

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,10 @@
 
 quarkus.datasource.db-kind=postgresql 
 quarkus.datasource.username=postgres
-quarkus.datasource.password=password
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5433/bcnttdata
+quarkus.datasource.password=toor
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/bcnttdata
 #bcnttdata
 quarkus.datasource.jdbc.max-size=16
 quarkus.hibernate-orm.log.sql=true
-
-
 quarkus.hibernate-orm.database.generation=update
 #drop-and-create
